--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,61 @@
-# Logs
-logs
+# --- Django & Python ---
+*.py[cod]
+__pycache__/
 *.log
+*.pot
+*.pyc
+*.pyo
+*.pyd
+# SQLite
+db.sqlite3
+# Django migrations (optional: include if you want clean history, but typically keep them)
+*initial.py
+# */migrations/*.py
+# virtual environments
+.env
+venv/
+env/
+ENV/
+# Django media and static (collected)
+media/
+staticfiles/
+static_collected/
+
+# --- React / Node ---
+# dependencies
+/node_modules/
+# production build
+/frontend/build/
+/frontend/dist/
+/frontend/.cache/
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+.pnp.*
+.pnp.js
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# --- IDEs & OS ---
+# VSCode
+.vscode/
+# IDEs like PyCharm
+.idea/
+# macOS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Windows
+Thumbs.db
+
+# --- PostgreSQL ---
+# if using local dumps
+*.dump
+*.sql
+
+# --- Coverage & Testing ---
+htmlcov/
+.coverage
+.tox/
+pytest_cache/
